# fastVEP

./: .gitignore  Cargo.toml  DEPLOYMENT.md  README.md
analysis/acmg_benchmark/: METHODS.md  clinvar_concordance.py  generate_figures.py
analysis/clinvar_eval/: evaluate_acmg.py  evaluate_acmg_v2.py
benchmarks/: download_data.sh  run_benchmark.sh
conda/recipe/: build.sh  meta.yaml
crates/fastvep-annotate/src/: lib.rs
crates/fastvep-cache/: Cargo.toml
crates/fastvep-cache/src/: gff.rs  info.rs  lib.rs  providers.rs  transcript_cache.rs
crates/fastvep-classification/src/: combiner.rs  config.rs  lib.rs  sa_extract.rs  types.rs
crates/fastvep-classification/src/criteria/: benign_standalone.rs  benign_strong.rs  benign_supporting.rs  mod.rs  pathogenic_moderate.rs  pathogenic_strong.rs  pathogenic_supporting.rs  pvs1.rs
crates/fastvep-cli/: Cargo.toml
crates/fastvep-cli/src/: lib.rs  main.rs  pipeline.rs  webserver.rs
crates/fastvep-consequence/src/: predictor.rs  splice.rs  sv_predictor.rs
crates/fastvep-core/src/: consequence.rs  position.rs
crates/fastvep-filter/: Cargo.toml
crates/fastvep-filter/src/: lib.rs
crates/fastvep-genome/src/: codon.rs  transcript.rs
crates/fastvep-hgvs/src/: coding.rs  genomic.rs  protein.rs
crates/fastvep-io/: Cargo.toml
crates/fastvep-io/src/: output.rs  sample.rs  variant.rs  vcf.rs
crates/fastvep-sa/: Cargo.toml
crates/fastvep-sa/src/: block.rs  chunk.rs  common.rs  custom.rs  fields.rs  gene.rs  index.rs  interval.rs  lib.rs  reader.rs  reader_v2.rs  writer_v2.rs  zigzag.rs
crates/fastvep-sa/src/sources/: scores.rs  topmed.rs
crates/fastvep-web/: Cargo.toml
crates/fastvep-web/src/: context.rs  errors.rs  handlers.rs  main.rs
crates/oxivep-cache/: Cargo.toml
crates/oxivep-cache/src/: annotation.rs  fasta.rs  gff.rs  lib.rs  providers.rs
crates/oxivep-cli/: Cargo.toml
crates/oxivep-cli/src/: main.rs  pipeline.rs  webserver.rs
crates/oxivep-consequence/: Cargo.toml
crates/oxivep-consequence/src/: lib.rs  predictor.rs  splice.rs
crates/oxivep-core/: Cargo.toml
crates/oxivep-core/src/: consequence.rs  lib.rs  position.rs
crates/oxivep-filter/: Cargo.toml
crates/oxivep-filter/src/: lib.rs
crates/oxivep-genome/: Cargo.toml
crates/oxivep-genome/src/: codon.rs  lib.rs  transcript.rs
crates/oxivep-hgvs/: Cargo.toml
crates/oxivep-hgvs/src/: coding.rs  genomic.rs  lib.rs  protein.rs
crates/oxivep-io/: Cargo.toml
crates/oxivep-io/src/: lib.rs  output.rs  variant.rs  vcf.rs
crates/oxivep-io/tests/: vep_compat.rs
crates/oxivep-sa/: Cargo.toml
crates/oxivep-sa/src/: block.rs  common.rs  gene.rs  index.rs  kmer16.rs  lib.rs  reader.rs  reader_v2.rs  var32.rs  writer.rs
crates/oxivep-sa/src/sources/: cosmic.rs  dbnsfp.rs  mitomap.rs  mod.rs  onekg.rs  primateai.rs  revel.rs  spliceai.rs
crates/oxivep-sa/tests/: round_trip.rs
docs/: ACMG.md  ACMG_SETUP.md  index.html
genomes/: arabidopsis  drosophila  elegans  human  mouse  yeast  zebrafish
manuscript/: manuscript.md
manuscript/data/: code_metrics.csv  consequence_distribution.csv  format_comparison.csv  giab_benchmark.csv  organism_comparison.csv  resource_usage.csv  scaling.csv  vep_comparison.csv  vep_concordance.csv
manuscript/figures/: fig1_architecture.txt  generate_figures.py
scripts/: deploy-clinical.sh  deploy-full.sh  deploy-minimal.sh
tests/: test.gff3  test.vcf
validation/: compare_vep.py  run_validation.sh
web/: index.html
