[package]
name = "fastvep-sa"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Supplementary annotation format (fastSA) for fastVEP: binary reader/writer with block compression"

[dependencies]
fastvep-core = { workspace = true }
fastvep-cache = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
memmap2 = { workspace = true }
zstd = { workspace = true }
zip = { workspace = true }
lru = { workspace = true }
log = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
