[package]
name = "oxivep-sa"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Supplementary annotation format (OxiSA) for OxiVEP: binary reader/writer with block compression"

[dependencies]
oxivep-core = { workspace = true }
oxivep-cache = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
memmap2 = { workspace = true }
zstd = { workspace = true }
zip = { workspace = true }
lru = { workspace = true }
log = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
